Restruct project path & update readme

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-PORT=
-DB_URL=postgres://$username:$password@localhost:$port/rssagg?sslmode=disable
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=rssagg
+PORT=8000
